--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -10,4 +10,29 @@
     align-content: center;
     align-items: center;
 
+    &__welcome{
+        color: white;
+    }
+    &__content{
+        max-width: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+        &--input{
+            width: 100%;
+        height: 190px;
+        text-align: center;
+        border: transparent;
+        border-radius: 15px;
+        }
+
+        &--question{
+        color: white;
+        padding-bottom: 40px;
+        text-align: center;
+        }
+    }
+
 }
