--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,27 @@ body {
   align-content: center;
   align-items: center;
 }
+.banner__welcome {
+  color: white;
+}
+.banner__content {
+  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.banner__content--input {
+  width: 100%;
+  height: 190px;
+  text-align: center;
+  border: transparent;
+  border-radius: 15px;
+}
+.banner__content--question {
+  color: white;
+  padding-bottom: 40px;
+  text-align: center;
+}
 
 .button {
   background-color: #126A3A;
