--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -26,6 +26,9 @@
         text-align: center;
         border: transparent;
         border-radius: 15px;
+        padding-right: 17px;
+        padding-left: 17px;
+        padding-top: 17px;
         }
 
         &--question{
