--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,9 @@ body {
   text-align: center;
   border: transparent;
   border-radius: 15px;
+  padding-right: 17px;
+  padding-left: 17px;
+  padding-top: 17px;
 }
 .banner__content--question {
   color: white;
