--- a/css/_button.scss
+++ b/css/_button.scss
@@ -1,5 +1,5 @@
-.button{
-    background-color:#126A3A ;
+.button {
+    background-color: #126a3a;
     color: white;
 
     width: auto;
@@ -17,16 +17,22 @@
 
     filter: drop-shadow(3px 6px 12px rgba(0, 74, 47, 0.19));
 
-    &--width{
+    &--width {
         width: 250px;
-
     }
 
-    
+    &__emojis {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
 
+        &--emoji{
+            padding: 10px;
+        }
+    }
 }
 
-.button:hover{
-    background-color: #8EC543;
-    ;
+.button:hover {
+    background-color: #8ec543;
 }
