--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 }
 
 .button {
-  background-color: #126A3A;
+  background-color: #126a3a;
   color: white;
   width: auto;
   height: 50px;
@@ -105,7 +105,16 @@ body {
 .button--width {
   width: 250px;
 }
+.button__emojis {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.button__emojis--emoji {
+  padding: 10px;
+}
 
 .button:hover {
-  background-color: #8EC543;
+  background-color: #8ec543;
 }/*# sourceMappingURL=main.css.map */
